--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "next": "14.3.0-canary.9",
+    "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
